# ProjektRownolegle

./: .gitignore  CMakeLists.txt  README.md  benchmark_result.csv  vcpkg.json
benchmark/: main.cpp  md5_cuda_benchmark.cu  md5_openmp_benchmark.cpp  md5_sequential_benchmark.cpp
extra/: p1.py
src/: main.cpp  md5.cpp  md5.h  md5_cuda.cu  md5_cuda.cuh  md5_kernels.cuh  md5_openmp.cpp  md5_openmp.hpp  md5_sequential.cpp  md5_sequential.hpp  some_code.cpp  some_code.h  utils.cpp  utils.h  utils.hpp
test/: md5_cuda_test.cu  md5_openmp_test.cpp  md5_sequential_test.cpp  md5_test.cpp  some_code_test.cpp  utils_test.cpp
